--- a/tutorial/pc_reset.css
+++ b/tutorial/pc_reset.css
@@ -28,3 +28,13 @@ address, article, aside, blockquote, body, cite, div, dl, dt, dd, em, figcaption
    padding: 0;
    vertical-align: baseline;
 }
+nav {
+   list-style: none;
+   list-style-image: none;
+}
+nav a {
+   text-decoration: none;
+}
+body {
+   line-height: 1;
+}
