--- a/tutorial/pc_reset.css
+++ b/tutorial/pc_reset.css
@@ -27,6 +27,7 @@ address, article, aside, blockquote, body, cite, div, dl, dt, dd, em, figcaption
    margin: 0;
    padding: 0;
    vertical-align: baseline;
+   box-sizing: border-box;
 }
 nav {
    list-style: none;
