--- a/tutorial/pc_grids.css
+++ b/tutorial/pc_grids.css
@@ -16,6 +16,11 @@
 /* Grid Styles for Page Body */
 body {
    display: grid;
+   grid-template-columns: 2fr 1fr;
 }
 
 /* Grid Styles for Nested Grid */
+section {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+}
